# PersonalOpenCADTools

./: .gitignore  CMakeLists.txt  README.en.md  README.md  TzSoftGlobalSetting.cmake
examples/: CMakeLists.txt
examples/ActivateWindow/: ActivateWindow.rc  ActivateWindow.vcxproj  ActivateWindow.vcxproj.filters  activate_window.cpp  activate_window.h  activate_window.qrc  activate_window.ui  main.cpp
examples/CGALExamples/: CMakeLists.txt
examples/CGALExamples/AABBCachedBBoxEx/: AABB_cached_bbox_example.cpp  CMakeLists.txt
examples/DesignPatternProject/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  DesignPattern.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
examples/DesignPatternProject/Template/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
examples/DesignPatternProject/code/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
examples/FunnyTestCases/: StdLocalTest.cpp  StdLocalTest.h  main.cpp
examples/FunnyTestCases/QPainterPathUseCases/: main.cpp  qpainterpathusecases.cpp  qpainterpathusecases.h  qpainterpathusecases.qrc  qpainterpathusecases.ui
examples/FunnyTestCases/SepSomeWidgets/: SepSomeWidgets.cpp  SepSomeWidgets.h  SepSomeWidgetsPlugin.cpp  SepSomeWidgetsPlugin.h
examples/FunnyTestCases/StackWidgetUse/: .gitignore  StackWidgetUse.pro  StackWidgetUse_zh_CN.ts  TZButtonGroupWidget.cpp  TZButtonGroupWidget.h  cpp.hint  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stackWidgetUse.qrc  testtablewidget.cpp  testtablewidget.h  ui_mainwindow.h
examples/FunnyTestCases/TZ_Widgets/: tz_widgets.cpp  tz_widgets.h  tz_widgetsplugin.cpp  tz_widgetsplugin.h
examples/SomeQtProjects/: CMakeLIsts.txt
examples/SomeQtProjects/QtCMakeExample/: CMakeLists.txt
examples/SomeQtProjects/TextEditUse/: mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/SomeQtProjects/TranslucentWidgetExOne/: TranslucentWidgetExOne.cpp  TranslucentWidgetExOne.h  TranslucentWidgetExOne.qrc  TranslucentWidgetExOne.rc  TranslucentWidgetExOne.ui  TranslucentWidgetExOne.vcxproj  TranslucentWidgetExOne.vcxproj.filters  TzArrowButton.cpp  TzArrowButton.h  main.cpp
examples/SomeQtProjects/TzSwitchWidget/: TzSwitchWidget.pro  form.ui  tzswitchwidget.cpp  tzswitchwidget.h  tzswitchwidget.pri  tzswitchwidgetplugin.cpp  tzswitchwidgetplugin.h
examples/SomeQtProjects/UseListView/: TzStdMapValueFinder.h  UseListView.pro  main.cpp  mainwindow.cpp  mainwindow.ui  res.qrc  tzlistview.cpp  tzlistview.h
examples/SomeQtProjects/UseSwitchWidget/: UseSwitchWidget.pro  UseSwitchWidget_zh_CN.ts  main.cpp  mainwindow.ui  res.qrc  zsstackedwidget.h
examples/SomeQtProjects/XmlExample_Tom_Zhao/: DomDemo.xml  XmlExample_Tom_Zhao.pro  XmlExample_Tom_Zhao_zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  styles.qss
examples/SomeQtProjects/myWidgets/: icons.qrc  multipagewidget.cpp  multipagewidget.h  multipagewidget.pri  multipagewidgetplugin.cpp  multipagewidgetplugin.h  myWidgets.pro  taskMenuextension.pri  tictactoeplugin.h  tzbutton.cpp  tzbutton.h  tzbutton.pri  tzbuttonplugin.cpp  tzbuttonplugin.h  tzcollections.cpp  tzcollections.h  tzcombobox.cpp  tzcombobox.h  tzcombobox.pri  tzcomboboxplugin.cpp  tzcomboboxplugin.h  tzswitchwidget.cpp  tzswitchwidget.h  tzswitchwidget.pri  tzswitchwidgetplugin.cpp  tzswitchwidgetplugin.h  tztabwidget.cpp  tztabwidget.h  tztabwidget.pri  tztabwidgetplugin.cpp  tztabwidgetplugin.h  zstabwidget.cpp  zstabwidget.ui  zstabwidgetplugin.h
examples/SomeQtProjects/switchWidget/: icons.qrc  switchWidget.pro  switchWidget.vcxproj  switchWidget.vcxproj.filters  switchwidget.cpp  switchwidget.h  switchwidget.pri  switchwidgetinner.cpp  switchwidgetinner.h  switchwidgetinner.ui  switchwidgetplugin.cpp  switchwidgetplugin.h  zsstackedwidget.cpp  zstabwidget.h  zstabwidgetplugin.cpp
examples/SomeQtProjects/testToolButtonStyle/: mainwindow.cpp  mainwindow.h  mainwindow.ui  testToolButtonStyle.pro  tzdocketbutton.cpp  tzdocketbutton.h
examples/flowlayout/: flowlayout.vcxproj  flowlayout.vcxproj.filters  window.cpp
examples/flowlayout/release/: moc_window.cpp
examples/using-stlex/: ReadMe.md  ReadMe_En.md
source/: CMakeLists.txt
source/Basic/: BasicTools.vcxproj  CMakeLists.txt  PlatForm.vcxproj  PlatForm.vcxproj.filters  Root.vcxproj
source/Basic/BasicTestCases/: CMakelists.txt
source/Basic/BasicTests/: BasicTests.cpp  BasicTests.h  BasicTests.ui  BasicTests.vcxproj  BasicTests.vcxproj.filters  CMakeLists.txt  main.cpp
source/Basic/BasicTools/: BasicTools.vcxproj  BasicTools.vcxproj.filters  CMakeLists.txt  pch.h
source/Basic/Platform/: CMakeLists.txt
source/Basic/Root/: CMakeLists.txt  Root.vcxproj  Root.vcxproj.filters  dllmain.cpp  framework.h  pch.cpp  pch.h
source/Basic/include/: basic_test_common_defines.h  root_mem_heap.h  root_mem_heap_dbg.h  root_mem_malloc.h
source/Deploy/: CMakeLists.txt
source/Deploy/DeployEnv/: CMakeLists.txt
source/Deploy/DeployThirdparty/: CMakeLists.txt
source/DesignPattern/BasicQtPatterns/: BasicQtPatterns.cpp  BasicQtPatterns.h  BasicQtPatterns.vcxproj  BasicQtPatterns.vcxproj.filters  basicqtpatterns_global.h
source/DesignPattern/BasicQtPatternsTests/: BasicQtPatternsTests.vcxproj  BasicQtPatternsTests.vcxproj.filters  main.cpp
source/FollyUse/: CMakeLists.txt
source/Geometry/: CMakeLists.txt
source/Gui/: CMakeLists.txt
source/UnitTests/: CMakeLists.txt
source/common/: target_winver.cpp
source/include/: basic_array.h  basic_bit_flags.h  basic_char_map.h  basic_export.h  basic_open_array.h  basic_open_array_stl.h  basic_open_bit_flags.h  basic_open_math.h  basic_open_no_copyable_class.h  platform_export.h  root_export.h  tzsofts_assert.h  tzsofts_debug_utils.h  tzsofts_lock.h  tzsofts_math.h  tzsofts_mem_heap.h  tzsofts_platform_utils.h  tzsofts_ref_counter.h  tzsofts_str_operations.h  tzsofts_trace_util.h  zsofts_compiler_specific.h  zsofts_platform.h  zsofts_types.h  zsofts_windows_ver.h
(+472 files in other folders)
