#[================================================================[.rst:
    Copyright (c)2022, Tom Zhao personal. ("TZOpenTools")
    This software is a personal tools project by Tom Zhao.
    Description:
#]================================================================]

set(TZ_GEOM_MATH_SDK_PATH ${TZ_SDK_INCLUDE_DIR}/GeomMath)
message("TZ_GEOM_MATH_SDK_PATH=${TZ_GEOM_MATH_SDK_PATH}")
set(TZ_GEOMETRY_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
message("TZ_GEOMETRY_SOURCE_DIR=${TZ_GEOMETRY_SOURCE_DIR}")
set(TZ_GEOMETRY_INCLUDE_DIR ${TZ_GEOMETRY_SOURCE_DIR}/include)
message("TZ_GEOMETRY_INCLUDE_DIR=${TZ_GEOMETRY_INCLUDE_DIR}")

# add_subdirectory(GeomMath)
